--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.bsafe</groupId>
-    <artifactId>cid-generation</artifactId>
+    <groupId>com.github.rmnvalera</groupId>
+    <artifactId>java-cid-generate-hash</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
